--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
     <script src="/assets/js/button.js"></script>
     <script src="/assets/js/form.js"></script>
     <script src="/assets/js/captcha.js"></script>
-    <script src="/assets/js/modal.js"></script>
+    <!-- <script src="/assets/js/modal.js"></script> -->
 
     <!-- Age Confirmation Modal -->
     <div
